# avro-neo-gen

./: .buildinfo  LICENSE  README.md  TODO.md  cli.html  core.html  genindex.html  index.html  internals.html  lefthook.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: cli.doctree  core.doctree  environment.pickle  index.doctree  internals.doctree  usage.doctree
.github/workflows/: documentation.yaml  on-push.yaml  release.yaml
_modules/: index.html
_modules/avro_neo_gen/: avro_schema.html  type_defs.html
_modules/avro_neo_gen/compiler/: compile_avro_schema.html  compile_avro_schema_record_body.html  compile_avro_schema_record_builder.html  compile_avro_schema_type_signature.html  compile_parser_namespace_map.html
_modules/avro_neo_gen/core/: abstract_neo_gen_object.html  abstract_neo_gen_record_builder.html  neo_gen_encodable.html  neo_gen_enum.html  neo_gen_fixed.html  neo_gen_record.html  neo_gen_type.html  type_defs.html  utils.html
_modules/avro_neo_gen/lexer/: read_path.html
_modules/avro_neo_gen/linker/: avro_schema_required_imports.html  emit_linker_file_map.html  inject_corelib_sys_path_shim.html  link_compiler_namespace_map.html  link_corelib.html  link_module.html
_modules/avro_neo_gen/parser/: parse_schema.html
_sources/: internals.md.txt
avro_neo_gen/: __init__.py  avro_schema.py  type_defs.py  utils.py
avro_neo_gen/compiler/: __init__.py  compile_avro_schema.py  compile_avro_schema_record_body.py  compile_avro_schema_record_builder.py  compile_avro_schema_type_signature.py  compile_parser_namespace_map.py
avro_neo_gen/core/: __init__.py  abstract_neo_gen_object.py  abstract_neo_gen_record_builder.py  neo_gen_builder.py  neo_gen_encodable.py  neo_gen_enum.py  neo_gen_error.py  neo_gen_fixed.py  neo_gen_record.py  neo_gen_type.py  type_defs.py  utils.py
avro_neo_gen/core/driver/: __init__.py  abstract_avro_driver.py  apache_avro_binary_driver.py  avro_driver_type.py  driver_proxy.py
avro_neo_gen/lexer/: __init__.py  read_path.py
avro_neo_gen/linker/: __init__.py  avro_schema_required_imports.py  emit_linker_file_map.py  inject_corelib_sys_path_shim.py  link_compiler_namespace_map.py  link_corelib.py  link_module.py
avro_neo_gen/parser/: __init__.py  parse_schema.py
docs/source/: cli.md  conf.py  core.md  index.md
tests/: conftest.py  test_avro_schema.py  test_compiler_compile_avro_schema.py  test_compiler_compile_avro_schema_record_body.py  test_compiler_compile_avro_schema_record_builder.py  test_compiler_compile_avro_schema_type_signature.py  test_compiler_compile_parser_namespace_map.py  test_core_driver_abstract_avro_driver.py  test_core_driver_apache_avro_binary_driver.py  test_core_driver_avro_driver_type.py  test_core_driver_driver_proxy.py  test_core_neo_gen_enum.py  test_core_neo_gen_fixed.py  test_core_neo_gen_record.py  test_core_neo_gen_record_builder.py  test_core_utils.py  test_lexer_read_path.py  test_linker_avro_schema_required_imports.py  test_linker_emit_linker_file_map.py  test_linker_inject_corelib_sys_path_shim.py  test_linker_link_compiler_namespace_map.py  test_linker_link_corelib.py  test_linker_link_module.py  test_parser_parse_schema.py  test_utils.py
